# sohablog

./: .env.dist  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
lib/: Cargo.toml
lib/src/: interfaces.rs  lib.rs  plugin.rs  render.rs
lib/src/types/: comment.rs  content.rs  mod.rs  user.rs
lib/src/utils/: csrf.rs  db.rs  mod.rs  page.rs  session_info.rs  static_file.rs  visitor_ip.rs
migrations/2019-01-15-171856_create-user-content/: down.sql  up.sql
migrations/2019-06-02-130600_create-basic-table/: down.sql  up.sql
migrations/2019-06-11-145400_system-basics/: down.sql  up.sql
migrations/2019-10-09-214800_system-basics/: down.sql  up.sql
src/: db.rs  error.rs  interfaces.rs  main.rs  plugin.rs  render.rs  schema.rs  template_interfaces.rs  util.rs
src/enums/: content.rs
src/models/: category.rs  comment.rs  content.rs  file.rs  mod.rs  tag.rs  user.rs
src/routes/: comment.rs  error.rs  mod.rs  post.rs  root.rs  static_file.rs  user.rs
src/routes/admin/: category.rs  comment.rs  file.rs  mod.rs  post.rs  root.rs
src/types/: comment.rs  content.rs  mod.rs  user.rs
src/utils/: csrf.rs  db.rs  mod.rs  page.rs  session_info.rs
statics-system/: admin-post_edit.js  markdown-palettes-0.4.11.min.js
statics-theme/: comment.js
templates/: base.html.tera
templates-system/: base.rs.html
templates-system/admin/: index.rs.html
templates-system/admin/category/: list.rs.html
templates-system/admin/comment/: list.rs.html
templates-system/admin/post/: edit.rs.html  list.rs.html
templates-system/misc/: csrf_hidden_input.rs.html
templates-system/user/: login.rs.html
templates-theme/: post_list.rs.html  post_show.rs.html
templates-theme/misc/: base.rs.html  csrf_input.rs.html  paginator.rs.html
templates/admin/: base.html.tera  index.html.tera
templates/admin/category/: list.html.tera
templates/admin/post/: edit.html.tera  list.html.tera
templates/admin/user/: login.html.tera
templates/static-system/: admin-comment.js  markdown-palettes-0.4.11.css
templates/static-theme/: comment.css
templates/system/: base.rs.html
templates/system/admin/: index.rs.html
templates/system/admin/category/: list.rs.html
templates/system/admin/comment/: list.rs.html
templates/system/admin/post/: edit.rs.html  list.rs.html
templates/system/misc/: paginator.rs.html
templates/system/user/: login.rs.html
templates/theme/: post_list.rs.html  post_show.rs.html
templates/theme/basic/: base.html.tera  list.html.tera  post.html.tera
templates/theme/misc/: base.rs.html
templates/user/: login.html.tera
