[package]
name = "soha-blog"
version = "0.1.0"
authors = ["Soha Jin"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = [ "mysql", "r2d2", "chrono" ] }
r2d2 = "0.8.3"
mysqlclient-sys = "0.2.4"
rocket = { version = "0.4.0", features = [ "private-cookies" ] }
rocket_contrib = { version = "0.4.0", features = [ "tera_templates" ] }
rocket_codegen = "0.4.0"
chrono = { version = "0.4.6", features = [ "serde" ] }
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
bcrypt = "0.3.0"
tera = "0.11.20"
comrak = "0.4.4"
dotenv = "0.13.0"
