[package]
name = "soha-blog"
version = "0.2.0"
authors = ["Soha Jin"]
edition = "2018"

[build-dependencies]
ructe = "0.6.2"

[dependencies]
diesel = { version = "1.4.2", features = [ "mysql", "r2d2", "chrono" ] }
r2d2 = "0.8.4"
mysqlclient-sys = "0.2.4"
rocket = { version = "0.4.1", features = [ "private-cookies" ] }
rocket_codegen = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = [ "serve" ] }
chrono = { version = "0.4.6", features = [ "serde" ] }
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
bcrypt = "0.4.0"
comrak = "0.6.2"
dotenv = "0.14.1"
