[package]
name = "sohablog"
version = "0.3.1"
authors = ["Soha Jin <soha@lohu.info>"]
edition = "2018"

[build-dependencies]
ructe = { version = "0.6.4", features = [ "mime03" ] }

[dependencies]
diesel = { version = "1.4.2", features = [ "postgres", "r2d2", "chrono" ] }
r2d2 = "0.8.5"
rocket = { version = "0.4.2", features = [ "private-cookies" ] }
rocket_codegen = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = [ "serve", "json" ] }
chrono = { version = "0.4.9", features = [ "serde" ] }
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"
bcrypt = "0.6.0"
comrak = "0.6.2"
dotenv = "0.14.1"
multipart = "0.16.1"
mime = "0.3.14"
validator = "0.9.0"
time = "0.1.42"
uuid = { version = "0.7.4", default-features = false, features = [ "v4" ] }
data-encoding = "2.1.2"
regex = "1.3.1"
libloading = "0.5.2"
ammonia = "2.1.1"
md5 = "0.6.1"
sohablog_lib = { path = "./lib/", features = [ "main" ] }
