[package]
name = "sohablog_lib"
version = "0.3.0"
authors = ["Soha Jin <soha@lohu.info>"]
edition = "2018"

[features]
main = [ "serde", "serde_derive", "serde_json", "rocket", "diesel", "libloading" ]

[dependencies]
chrono = { version = "0.4.6", features = [ "serde" ] }
uuid = { version = "0.7.4", default-features = false, features = [ "v4" ] }
comrak = "0.6.2"
mime = "0.3.13"
time = "0.1.42"

libloading = { version = "0.5.1", optional = true }
rocket = { version = "0.4.1", default-features = false, optional = true }
diesel = { version = "1.4.2", default-features = false, optional = true }
serde = { version = "1.0.91", default-features = false, optional = true }
serde_json = { version = "1.0.39", default-features = false, optional = true }
serde_derive = { version = "1.0.91", default-features = false, optional = true }

[lib]
path = "src/lib.rs"
